src/objects/Correlation__c.object
<CustomObject>
    <description>Milliman Correlation object for Correlaton Matrix</description>
    <fields>
        <fullName>Correlation__c</fullName>
        <label>Correlation</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matrix__c</fullName>
        <label>Matrix</label>
        <referenceTo>Matrix__c</referenceTo>
        <relationshipLabel>Correlations</relationshipLabel>
        <relationshipName>Correlations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk1__c</fullName>
        <label>Risk</label>
        <referenceTo>MLN_Risk__c</referenceTo>
        <relationshipLabel>Correlations</relationshipLabel>
        <relationshipName>Correlations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risked</label>
        <referenceTo>MLN_Risk__c</referenceTo>
        <relationshipLabel>Correlations (Risk)</relationshipLabel>
        <relationshipName>Correlations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Correlation</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correlations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>